flask-mysql-k8s-main/k8s/mysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-flask
  template:
    metadata:
      labels:
        app: mysql-flask
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              valueFrom:
                secretKeyRef:
                  name: mysql-secrets
                  key: DB
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secrets
                  key: DB_PASS              
          image: mysql:latest
          name: mysql-flask
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
               cpu: "100m"
               memory: "512Mi"
          ports:
            - name: mysqlport
              containerPort: 3306
              protocol: TCP
          volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
            claimName: mysql-pv-claim
