flask-mysql-k8s-main/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapi-service
spec:
  type: ClusterIP
  ports:
  - name: flaskapi
    port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapi
